Overflow problem with animation fixed

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -1,6 +1,7 @@
 @import './layouts/main.scss';
 
 #home-body {
+    overflow: hidden;
     @keyframes expandUnderlineToFull {
         0% {
             width: 0%;
